[lworld] C2 compilation fails with assert(value->bottom_type()->higher_equal(_type))

XMLWordPrintable

      # Internal Error (/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S257/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7773a4b1-4644-472f-8a5c-c475c114d88e/runs/2cba5af5-7eaa-4729-980e-b67c7fca2b2d/workspace/open/src/hotspot/share/opto/memnode.cpp:2035), pid=18801, tid=18813
      # assert(value->bottom_type()->higher_equal(_type)) failed: sanity

      Current CompileTask:
      C2: 5711 1010 b 4 compiler.valhalla.inlinetypes.TestNullableArrays::test93_verifier (46 bytes)

      Stack: [0x00007f89dbdfe000,0x00007f89dbeff000], sp=0x00007f89dbefa6f0, free space=1009k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1358274] LoadNode::Value(PhaseGVN*) const+0xbc4
      V [libjvm.so+0x1525ec3] PhaseIterGVN::transform_old(Node*)+0x3f3
      V [libjvm.so+0x151e80e] PhaseIterGVN::optimize()+0x6e
      V [libjvm.so+0x946750] Compile::Optimize()+0x910
      V [libjvm.so+0x948707] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x15d7
      V [libjvm.so+0x780ecc] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x16c
      V [libjvm.so+0x957bf0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd70
      V [libjvm.so+0x958a08] CompileBroker::compiler_thread_loop()+0x6b8
      V [libjvm.so+0x17b6bbc] JavaThread::thread_main_inner()+0x21c
      V [libjvm.so+0x17bc990] Thread::call_run()+0x100
      V [libjvm.so+0x1499006] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: