8251442: [lworld] C2 compilation fails with assert(value->bottom_type()->higher_equal(_type))