src/hotspot/share/opto/subnode.cpp
@@ -941,10 +941,13 @@ const Type *CmpPNode::sub( const Type *t1, const Type *t2 ) const {
       } else {                  // Neither subtypes the other
         unrelated_classes = true;
       }
-      if ((r0->flat_array() && (!r1->can_be_inline_type() || (klass1->is_inlinetype() && !klass1->flatten_array()))) ||
-          (r1->flat_array() && (!r0->can_be_inline_type() || (klass0->is_inlinetype() && !klass0->flatten_array())))) {
-        // One type is flattened in arrays and the other type is not. Must be unrelated.
-        unrelated_classes = true;
+      if (!unrelated_classes) {
+        // Handle inline type arrays
+        if ((r0->flatten_array() && (!r1->can_be_inline_type() || (klass1->is_inlinetype() && !klass1->flatten_array()))) ||
+            (r1->flatten_array() && (!r0->can_be_inline_type() || (klass0->is_inlinetype() && !klass0->flatten_array())))) {
+          // One type is flattened in arrays but the other type is not. Must be unrelated.
+          unrelated_classes = true;
+        }
       }
       if (unrelated_classes) {
         // The oops classes are known to be unrelated. If the joined PTRs of
